# isomer-classification

./: .gitignore  README.md  pyproject.toml
data/iupac_names/: C1H4.json  C4H10.json  C5H12.json  C6H14.json  C7H16.json  C8H18.json
pysomer/: trainer.py
pysomer/data/: __init__.py  dataset.py
pysomer/nn/: __init__.py  mlp.py
scripts/: create_data.py  train_mlp.py
src/data/: __init__.py  dataset.py  gen.py
