[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysomer"
version = "0.0.0"
description = "Isomer classification using Python"
authors = [{name = "Hunter Heidenreich", email = "hheiden0@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
